Add select trainer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
     <activity
       android:label="@string/activity_typeselect_name"
       android:name=".view.TypeSelectActivity"/>
+    <activity
+      android:label="@string/activity_select_trainer_name"
+      android:name=".view.SelectTrainerActivity"/>
   </application>
 
 </manifest>
