--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 'android-P'
     defaultConfig {
         applicationId "edu.swe.healthcareapplication"
         minSdkVersion 21
@@ -23,27 +23,21 @@ android {
 }
 
 ext {
-    supportLibVersion = "27.1.0"
+    supportLibVersion = "28.0.0-alpha1"
     constraintLayoutVersion = "1.1.0"
     googleServiceVersion = "15.0.1"
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
-    implementation "com.android.support:design:${supportLibVersion}"
+    api 'com.android.support:design:28.0.0-alpha1'
     implementation "com.android.support:support-v4:${supportLibVersion}"
-    implementation "com.android.support:support-media-compat:${supportLibVersion}"
-    implementation "com.android.support:animated-vector-drawable:${supportLibVersion}"
-    implementation "com.android.support:palette-v7:${supportLibVersion}"
-    implementation "com.android.support:recyclerview-v7:${supportLibVersion}"
     implementation "com.android.support.constraint:constraint-layout:${constraintLayoutVersion}"
     implementation "com.google.android.gms:play-services-auth:${googleServiceVersion}"
-    implementation "com.google.firebase:firebase-core:15.0.2"
+    implementation 'com.google.firebase:firebase-core:15.0.2'
     implementation 'com.google.firebase:firebase-database:15.0.1'
     implementation 'com.google.firebase:firebase-storage:15.0.2'
-    implementation "com.google.firebase:firebase-auth:15.1.0"
-    implementation 'com.firebaseui:firebase-ui-storage:0.6.0'
+    implementation 'com.google.firebase:firebase-auth:15.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
