--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,20 +19,23 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
-    <activity android:name=".view.TimeTableActivity"/>
-    <activity
-      android:label="@string/activity_signin_name"
-      android:name=".view.SignInActivity"/>
-    <activity
-      android:label="@string/activity_signup_user_name"
-      android:name=".view.SignUpActivity"/>
-    <activity
-      android:label="@string/activity_typeselect_name"
-      android:name=".view.TypeSelectActivity"/>
+    <activity android:name=".view.MainActivity"/>
     <activity
       android:exported="true"
+      android:label="@string/activity_type_select_name"
+      android:name=".view.TypeSelectActivity"/>
+    <activity
+      android:label="@string/activity_sign_in_name"
+      android:name=".view.SignInActivity"/>
+    <activity
+      android:name=".view.SignUpActivity"/>
+    <activity
       android:label="@string/activity_select_trainer_name"
       android:name=".view.SelectTrainerActivity"/>
+    <activity
+      android:label="@string/activity_select_time_name"
+      android:name=".view.SelectTimeActivity"
+      android:theme="@style/AppTheme.NoActionBar"/>
   </application>
 
 </manifest>
