--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
-    <activity android:name=".view.MainActivity"/>
+    <activity
+      android:name=".view.MainActivity"
+      android:theme="@style/AppTheme.NoActionBar"/>
     <activity
       android:exported="true"
       android:label="@string/activity_type_select_name"
