Add edit profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
       android:windowSoftInputMode="stateHidden|adjustResize"/>
     <activity
       android:label="@string/activity_edit_profile"
-      android:name=".view.EditProfileActivity"/>
+      android:name=".view.EditProfileActivity"
+      android:windowSoftInputMode="stateHidden"/>
   </application>
 
 </manifest>
