--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 'android-P'
@@ -45,6 +46,9 @@ dependencies {
     implementation "com.firebaseui:firebase-ui-database:3.3.1"
     implementation ('com.firebaseui:firebase-ui-auth:4.0.0') {
         exclude group: 'com.android.support', module: '*'
+    }
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
+        transitive = true
     }
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
