--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.google.firebase:firebase-storage:16.0.1'
     implementation 'com.google.firebase:firebase-auth:16.0.1'
+    implementation 'com.google.firebase:firebase-messaging:17.0.0'
     implementation "com.firebaseui:firebase-ui-database:3.3.1"
     implementation ('com.firebaseui:firebase-ui-auth:4.0.0') {
         exclude group: 'com.android.support', module: '*'
